去掉多余的图片高度

--- a/2014-12-14/index.html
+++ b/2014-12-14/index.html
@@ -8,7 +8,7 @@
     <body>
       <div id="outer-container" class="container">
         <div id="inner-container" class="container">
-          <img id="inner-content" src="http://www.baidu.com/img/bdlogo.png" height="300">
+          <img id="inner-content" src="http://www.baidu.com/img/bdlogo.png">
           </img>
         </div>
       </div>
